# linecrypt

./: README.md  pyproject.toml
linevault/: decrypt.py  encrypt.py  generate_key.py
